runFormatTest(import.meta, ["mdx"], { proseWrap: "always" });
